# bitaxe_monitor

./: .gitignore  Cargo.toml  README.md  config.example.json
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs  metrics.rs  persist.rs
tests/: integration_static.rs
